<resources>
    <string name="app_name">Desafio4Firebase</string>
    <string name="game_release">Lançamento: </string>
    <string name="add_game">Add game</string>
    <string name="delete_game">Delete game</string>
    <string name="add_image">Add image</string>
    <string name="game_name">Name</string>
    <string name="created">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">Save game</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">Create account</string>
</resources>