<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.AddGameActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="264dp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/pill_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="44dp"
            android:textColorHint="@color/grey_darker"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_name"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/grey_darker"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/created"
                android:inputType="number"
                android:lines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/grey_darker"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSaveGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/save_game"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonDeleteGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>